# meal-cnt-bot

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
data/: meal_counts.json
models/: meal_count.py
routers/: meal_count_router.py  scheduler_router.py  weekly_test_router.py
schemas/: meal_count.py
services/: email_service.py  event_service.py  meal_count_service.py  scheduler_service.py  weekly_test_service.py
static/css/: style.css
templates/: detail.html  index.html
utils/: auth.py  date_util.py
